[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/d_daok_cosas_strip10.png" type="Texture" id=1]
[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=2]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=3]
[ext_resource path="res://sprites/d_particula_onda.png" type="Texture" id=4]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Ocio.gd" type="Script" id=7]
[ext_resource path="res://sounds/a_copa.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 49.0
height = 88.0

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.2, 0.8, 1 )
colors = PoolColorArray( 1, 1, 1, 0.156863, 1, 1, 1, 0.784314, 1, 1, 1, 0.784314, 1, 1, 1, 0.0784314 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 7 )
width = 512

[sub_resource type="Curve" id=8]
bake_resolution = 20
_data = [ Vector2( 0, 0.288636 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
width = 512
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.2
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.2
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=10]
resource_name = "Go"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Tocadiscos:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.2, 1.1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/Mascara:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Tocadiscos:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/Mascara:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Ocio" type="Node2D" groups=["bodega", "ediOcio", "ediffice", "nevera", "porton", "robable"]]
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
collision_layer = 9
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Fondo" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Chuspa1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -11, -50 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Chuspa2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -23, -47 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 3
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Chuspa3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -37, -45 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 3
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Chuspa4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -53, -41 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 3
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Copa1" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -12, -79 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Copa2" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -25, -77 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Copa3" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -40, -73 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Copa4" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -55, -68 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Tocadiscos" type="Sprite" parent="Imagen"]
position = Vector2( 30, -35 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Onda" type="Particles2D" parent="Imagen/Tocadiscos"]
position = Vector2( -4, -80 )
emitting = false
amount = 3
lifetime = 5.0
visibility_rect = Rect2( -180, -180, 200, 200 )
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Salon" type="Node2D" parent="Imagen"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sala1" type="Node2D" parent="Imagen/Salon"]
position = Vector2( -38, -23 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala2" type="Node2D" parent="Imagen/Salon"]
position = Vector2( 48, 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sala" type="YSort" parent="Imagen/Salon" groups=["interior"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Mascara" type="Sprite" parent="Imagen"]
position = Vector2( -38, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 5 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -15, -36 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -45, -30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( -66, -9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin5" type="Node2D" parent="Fin"]
position = Vector2( -65, 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin6" type="Node2D" parent="Fin"]
position = Vector2( -46, 38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin7" type="Node2D" parent="Fin"]
position = Vector2( -17, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin8" type="Node2D" parent="Fin"]
position = Vector2( 22, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin9" type="Node2D" parent="Fin"]
position = Vector2( 51, 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin10" type="Node2D" parent="Fin"]
position = Vector2( 72, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin11" type="Node2D" parent="Fin"]
position = Vector2( 75, -13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin12" type="Node2D" parent="Fin"]
position = Vector2( 56, -32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin13" type="Node2D" parent="Fin"]
position = Vector2( 19, -38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 6 )]
position = Vector2( 28, 54 )

[node name="Anima" type="AnimationPlayer" parent="."]
anims/Go = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Rockola" type="Timer" parent="."]
one_shot = true

[node name="SonidoCopa" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 8 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 9 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SMusica" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="Rockola" to="." method="_on_Rockola_timeout"]
[connection signal="finished" from="SMusica" to="." method="_on_SMusica_finished"]
